fix: set max height on favicon to avoid alt-text wrapping and breaking the layout

--- a/links/static/css/style.css
+++ b/links/static/css/style.css
@@ -49,6 +49,8 @@ header, section {
     flex: 0 0 24px;
 
     width: 24px;
+    height: 24px;
+
     margin-right: 0.5rem;
 
     overflow: hidden;
